--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,8 +1,3 @@
-name: Django CI
-
-on: [push]
-  
-
 jobs:
   build:
 
@@ -11,6 +6,18 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.9]
+
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: github_actions
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
@@ -22,6 +29,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Run migrations
+      run: |
+        python manage.py migrate
     - name: Run Tests
       run: |
         python manage.py test
